force-app/main/default/objects/maps__AdvRouteTemplateUser__c/maps__AdvRouteTemplateUser__c.object-meta.xml
<CustomObject>
    <description>These are the users associated to a Advanced Route template.
This object holds information needed to route the user</description>
    <label>Maps Advanced Route Template User</label>
    <nameField>
        <label>Maps Advanced Route Template User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Template Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>