force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__AdvRouteTemplate__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the associated Advanced Route template for the user</description>
    <label>Maps Advanced Route Template</label>
    <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Template Users</relationshipLabel>
    <relationshipName>AdvRouteTemplateUsers</relationshipName>
    <type>Lookup</type>
</CustomField>