force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>maps__AsyncApexJobId__c</fullName>
    <description>This is the job id for the asyncronous apex processing</description>
    <label>Async Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>