force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__AutomaticOpStartsOn__c.field-meta.xml
<CustomField>
    <fullName>maps__AutomaticOpStartsOn__c</fullName>
    <description>This is the date that the automatic optimization will start reoptimizing on.</description>
    <label>Automatic Op Starts On</label>
    <type>Date</type>
</CustomField>