force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseUrl__c</fullName>
    <description>This is the base salesforce url; used in email templates</description>
    <formula>maps__AdvRouteTemplate__r.maps__BaseUrl__c</formula>
    <label>Base Url</label>
    <type>Text</type>
</CustomField>