force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__CurrentJobAttempts__c.field-meta.xml
<CustomField>
    <fullName>maps__CurrentJobAttempts__c</fullName>
    <description>This field is to track how many times the current day has been attempted to route</description>
    <label>Current Job Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>