force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__CurrentProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>maps__CurrentProcessingStatus__c</fullName>
    <description>This is used to determine where we are in the process and rather or not we need to kick off the next step.</description>
    <label>Current Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Object Priorities Submitted</fullName>
            </value>
            <value>
                <fullName>Object Priorities Not Submitted</fullName>
            </value>
            <value>
                <fullName>Routing Submitted</fullName>
            </value>
            <value>
                <fullName>Routing Not Submitted</fullName>
            </value>
            <value>
                <fullName>Routing Poll Submitted</fullName>
            </value>
            <value>
                <fullName>Routing Poll Not Submitted</fullName>
            </value>
            <value>
                <fullName>Next Working Day Submitted</fullName>
            </value>
            <value>
                <fullName>Next Working Day Not Submitted</fullName>
            </value>
            <value>
                <fullName>Available For Submission</fullName>
                <default>true</default>
                <label>Available For Submission</label>
            </value>
            <value>
                <fullName>Geocoding Submitted</fullName>
            </value>
            <value>
                <fullName>Geocoding Not Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>