force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__CurrentProcessingStatusBulk__c.field-meta.xml
<CustomField>
    <fullName>maps__CurrentProcessingStatusBulk__c</fullName>
    <description>These are the bulk processing statuses</description>
    <label>Current Processing Status Bulk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available For Submission</fullName>
                <default>true</default>
                <label>Available For Submission</label>
            </value>
            <value>
                <fullName>Next Working Day Submitted</fullName>
            </value>
            <value>
                <fullName>Building Route Request Needs Processing</fullName>
            </value>
            <value>
                <fullName>Building Route Request</fullName>
            </value>
            <value>
                <fullName>Routing Poll Submitted</fullName>
            </value>
            <value>
                <fullName>Next Working Day Not Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>