force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__DateProcessing__c.field-meta.xml
<CustomField>
    <fullName>maps__DateProcessing__c</fullName>
    <description>This is the date that is currently being routed</description>
    <label>Date Processing</label>
    <type>Date</type>
</CustomField>