force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__DeletePreviousRouteData__c.field-meta.xml
<CustomField>
    <fullName>maps__DeletePreviousRouteData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to delete previous advanced route generated output when reoptimizing</description>
    <label>Delete Previous Route Data</label>
    <type>Checkbox</type>
</CustomField>