force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__JobSubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>maps__JobSubmittedAt__c</fullName>
    <description>This field tracks the last time a job was submitted</description>
    <label>Job Submitted At</label>
    <type>DateTime</type>
</CustomField>