force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__LastAutoOptimizationRunAt__c.field-meta.xml
<CustomField>
    <fullName>maps__LastAutoOptimizationRunAt__c</fullName>
    <label>Last Auto Optimization Run At</label>
    <type>DateTime</type>
</CustomField>