force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__LastFailedJobError__c.field-meta.xml
<CustomField>
    <fullName>maps__LastFailedJobError__c</fullName>
    <description>This field is used to hold the last failed job&apos;s error of the routing job to be displayed in an email template</description>
    <label>Last Failed Job Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>