force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__LastJobStoppedStatus__c.field-meta.xml
<CustomField>
    <fullName>maps__LastJobStoppedStatus__c</fullName>
    <description>This field is used to hold the last stopped job status of the routing job to be displayed in an email template</description>
    <label>Last Job Stopped Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>