force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__LastLocation__c.field-meta.xml
<CustomField>
    <fullName>maps__LastLocation__c</fullName>
    <description>This is the last location registered by the user.  Used when routing the partial day from last location.</description>
    <label>Last Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>