force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__LastOptimizationRunAt__c.field-meta.xml
<CustomField>
    <fullName>maps__LastOptimizationRunAt__c</fullName>
    <description>This is the last time that a route optimization was run</description>
    <label>Last Optimization Run At</label>
    <type>DateTime</type>
</CustomField>