force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__LastOptimizationSucceededAt__c.field-meta.xml
<CustomField>
    <fullName>maps__LastOptimizationSucceededAt__c</fullName>
    <description>This field tracks the last time a job was submitted and it was successful</description>
    <label>Last Optimization Succeeded At</label>
    <type>DateTime</type>
</CustomField>