force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__NeedsDeleting__c.field-meta.xml
<CustomField>
    <fullName>maps__NeedsDeleting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will flag a template user for batch deletion</description>
    <label>Needs Deleting</label>
    <type>Checkbox</type>
</CustomField>