force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__NextEmailId__c.field-meta.xml
<CustomField>
    <fullName>maps__NextEmailId__c</fullName>
    <description>This is the id of the next email to send out</description>
    <label>Next Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>