force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__ProcessRoutingNeeded__c.field-meta.xml
<CustomField>
    <fullName>maps__ProcessRoutingNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a checkbox to let us know that the Queue Routing Batch needs to process this user</description>
    <label>Process Routing Needed</label>
    <type>Checkbox</type>
</CustomField>