force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>maps__ProfileId__c</fullName>
    <label>Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>