force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__ReadyForUse__c.field-meta.xml
<CustomField>
    <fullName>maps__ReadyForUse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox determines if the template user is ready for the user to input their data and is also used to determine if the user is ready for routing</description>
    <label>Ready for Use</label>
    <type>Checkbox</type>
</CustomField>