force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__RoutingJobId__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutingJobId__c</fullName>
    <description>This is the job id for the current route processing</description>
    <label>Routing Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>