force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__RoutingStartedOn__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutingStartedOn__c</fullName>
    <description>this is the date that the current reoptimization started on</description>
    <label>Routing Started On</label>
    <type>Date</type>
</CustomField>