force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__SendCompletionEmail__c.field-meta.xml
<CustomField>
    <fullName>maps__SendCompletionEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED</description>
    <label>Send Completion Email</label>
    <type>Checkbox</type>
</CustomField>