force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__StopRoutingOnDate__c.field-meta.xml
<CustomField>
    <fullName>maps__StopRoutingOnDate__c</fullName>
    <description>This is the date that the current route process should generate till</description>
    <label>Stop Routing on Date</label>
    <type>Date</type>
</CustomField>