force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__User__c.field-meta.xml
<CustomField>
    <fullName>maps__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the user associated to the template</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AdvRouteTemplateUsers</relationshipName>
    <type>Lookup</type>
</CustomField>