force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__UserEmail__c.field-meta.xml
<CustomField>
    <fullName>maps__UserEmail__c</fullName>
    <description>This is the email of the associated user</description>
    <label>User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>