force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__UserFirstName__c.field-meta.xml
<CustomField>
    <fullName>maps__UserFirstName__c</fullName>
    <description>This is the first name of the associated user</description>
    <label>User First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>