force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__UserLastName__c.field-meta.xml
<CustomField>
    <fullName>maps__UserLastName__c</fullName>
    <description>This is the last name of the associated user</description>
    <label>User Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>