force-app/main/default/objects/maps__AdvRouteTemplateUser__c/fields/maps__UserTimeZoneKey__c.field-meta.xml
<CustomField>
    <fullName>maps__UserTimeZoneKey__c</fullName>
    <description>This is the time zone key of the associated user</description>
    <label>User Time Zone Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>